welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:3: error: value unary_! is not a member of Int
while(!2*biscuit=caseOrange+1) {
      ^